delete files endpoints
